Add reservation endpoint
